crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__build_backend__test__additional_keys.snap
---
source: crates/pixi_manifest/src/toml/build_backend.rs
expression: "expect_parse_failure(r#\"\n            backend = { name = \"foobar\", version = \"*\" }\n            additional = \"key\"\n        \"#)"
---
  × Unexpected keys, expected only 'backend', 'channels', 'additional-dependencies', 'source', 'config', 'target'
   ╭─[pixi.toml:3:13]
 2 │             backend = { name = "foobar", version = "*" }
 3 │             additional = "key"
   ·             ─────┬────
   ·                  ╰── 'additional' was not expected here
 4 │
   ╰────
  help: Did you mean 'additional-dependencies'?
