crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__build_backend__test__configuration_deprecation_warning.snap
---
source: crates/pixi_manifest/src/toml/build_backend.rs
expression: "format_parse_error(toml, parsed.warnings.into_iter().next().unwrap())"
---
  ⚠ The `configuration` field is deprecated. Use `config` instead.
   ╭─[pixi.toml:3:13]
 2 │             backend = { name = "foobar", version = "*" }
 3 │             configuration = { key = "value" }
   ·             ──────┬──────
   ·                   ╰── replace this with 'config'
 4 │
   ╰────
